--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,14 +6,18 @@ body {
     background-color: black;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
+    
+
+
 }
 
 .container {
     width: 100%;
-    background-image: url();
+    background-color: black;
+    
 }
 
-.angletable {
+.table {
     list-style-type: none;
     cursor: pointer;
     height: 100px;
@@ -24,11 +28,11 @@ body {
     border: 3px solid blue;
     transform: rotate(45deg);
     position: relative;
-    //bottom: 40px;
+    
 }
 
 
-.angletable  h1 {
+.table  h1 {
         color: white;
         font-size: 30px;
         text-align: center;
@@ -45,7 +49,8 @@ body {
         color: white;
         text-align: center;
         position: relative;
-        top: 250px;
+        top: 230px;
+        
     }
 }
 
@@ -61,7 +66,70 @@ body {
     line-height: 45px;
     position: relative;
     right: 110px;
-    bottom: 55px;
+    bottom: 320px;
     border-radius: 100px;
   
 }
+
+.booth {
+    display: inline-block;
+    left: 200px;
+    margin-right: 125px;
+    position: relative;
+    bottom: 125px;
+    height: 150px;
+    width: 90px;
+    border: 3px solid blue;
+    color: white;
+    font-size: 30px;
+    line-height: 150px;
+    text-align: center;
+    
+}
+
+.angletables {
+    width: 200px;
+    margin: 0px;
+
+}
+
+.hightop1 {
+    list-style-type: none;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    line-height: 150px;
+    position: relative;
+    right: 550px;
+    top: 50px;
+    height: 150px;
+    width: 150px;
+    border: 3px solid blue;
+    border-radius: 100px;
+}
+
+.hightop2 {
+    position: relative;
+    right: 375px;
+    top: 75px;
+    height: 150px;
+    width: 150px;
+    border: 3px solid blue;
+    border-radius: 100px;
+    list-style-type: none;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    line-height: 150px;
+}
+
+
+
+
+
+  
+    
+
+
+
+ 
