--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,7 +13,8 @@ body {
 
 .container {
     width: 100%;
-    background-color: black;
+    
+
     
 }
 
@@ -24,6 +25,7 @@ body {
     width: 100px;
     display: block;
     margin-top: 60px;
+    background-image: url(http://cdn.thumbr.io/aa94cbf2ddf4e398a0084f83f89fd28b/KhPZbWboUluRxv8PG87L/i.istockimg.com/file_thumbview_approve/19079506/3/stock-illustration-19079506-wooden-background.jpg/100/thumb.jpg);
     text-align: center;
     border: 3px solid blue;
     transform: rotate(45deg);
@@ -33,7 +35,7 @@ body {
 
 
 .table  h1 {
-        color: white;
+        //color: white;
         font-size: 30px;
         text-align: center;
         line-height: 60px;
@@ -45,6 +47,7 @@ body {
     width: 200px;
     height: 600px;
     border: 3px solid blue;
+    background-image: url(http://www.krworkshops.com/images/BackgroundLeft2.gif);
     h1 {
         color: white;
         text-align: center;
@@ -62,7 +65,9 @@ body {
     margin-bottom: 20px;
     text-align: center;
     font-size: 30px;
+    cursor: pointer;
     border: 3px solid blue;
+    background-image: url(http://img.stockfresh.com/files/c/clearviewstock/x/82/705015_13436385.jpg);
     line-height: 45px;
     position: relative;
     right: 110px;
@@ -78,9 +83,11 @@ body {
     position: relative;
     bottom: 125px;
     height: 150px;
+    cursor: pointer;
     width: 90px;
     border: 3px solid blue;
-    color: white;
+    background-image: url(http://cdn.thumbr.io/aa94cbf2ddf4e398a0084f83f89fd28b/KhPZbWboUluRxv8PG87L/i.istockimg.com/file_thumbview_approve/19079506/3/stock-illustration-19079506-wooden-background.jpg/100/thumb.jpg);
+    //color: white;
     font-size: 30px;
     line-height: 150px;
     text-align: center;
@@ -95,11 +102,13 @@ body {
 
 .hightop1 {
     list-style-type: none;
-    color: white;
+    //color: white;
     font-size: 30px;
     text-align: center;
+    cursor: pointer;
     line-height: 150px;
     position: relative;
+    background-image: url(http://cdn.thumbr.io/aa94cbf2ddf4e398a0084f83f89fd28b/KhPZbWboUluRxv8PG87L/i.istockimg.com/file_thumbview_approve/19079506/3/stock-illustration-19079506-wooden-background.jpg/100/thumb.jpg);
     right: 550px;
     top: 50px;
     height: 150px;
@@ -113,11 +122,13 @@ body {
     right: 375px;
     top: 75px;
     height: 150px;
+    cursor: pointer;
     width: 150px;
     border: 3px solid blue;
     border-radius: 100px;
+    background-image: url(http://cdn.thumbr.io/aa94cbf2ddf4e398a0084f83f89fd28b/KhPZbWboUluRxv8PG87L/i.istockimg.com/file_thumbview_approve/19079506/3/stock-illustration-19079506-wooden-background.jpg/100/thumb.jpg);
     list-style-type: none;
-    color: white;
+    //color: white;
     font-size: 30px;
     text-align: center;
     line-height: 150px;
